SAK-18721 use the URL rather than URI class to parse the icon URL
git-svn-id: https://source.sakaiproject.org/svn/portal/trunk@81524 66ffb92e-73f9-0310-93c1-f5514f145a0a